# reg-valve

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: compiler-flags.cmake  source-files.cmake
code/: convert-core.h  convert-core.hpp  match-core.h  math-core.h  math-core.hpp  reg-core.hpp  reg.core.hpp  style-core.hpp
code/math-core/: deflate-polynomial.hpp  solve-polynomial.hpp
code/math-core/fraction/: decompose.hpp
code/math-core/matrix/: solve.hpp
code/math-core/polynomial/: deflate.hpp  multiply.hpp  solve.hpp
code/numina/constants/: constants.hpp
code/numina/fraction/: invlaplace.hpp  parfrac.hpp
code/numina/matrix/: solve.hpp
code/numina/polynomial/: deflate.hpp  multiply.hpp  solve.hpp
code/numina/terms/: term-expression.hpp  term.hpp
code/numina/terms/time-terms/: time-terms.hpp  utime-terms.hpp
code/qt-application/: application.h  double-slider.hpp
code/qt-application/app-functions/: constructor.cpp
code/qt-application/button-functions/: exp-functions.cpp  num-functions.cpp  reg-functions.cpp
code/qt-application/chart-funcs/: static-funcs.cpp  static-functions.cpp
code/qt-application/chart-functions/: static-functions.cpp
code/qt-application/static-functions/: charts.cpp  general.cpp  line-edit.cpp  model-param.cpp  slider.cpp  styles.cpp
code/qt-application/structures/: chart-properties-dialog.hpp  line-edit.hpp  reg-parameter.h  reg-parameter.hpp  reg-widget.hpp
code/qt-application/structures/dialogs/: chart-dialog.hpp  help-window.hpp  mod-par-dialog.hpp
code/qt-application/tabs/: ExpTab.cpp  NumTab.cpp  exp-tab.cpp  num-tab.cpp  reg-tab.cpp  static-funcs.cpp  static-functions.cpp
code/series/: complex-series.hpp  series.hpp  set-series.hpp
code/structures/: double-slider.hpp  model-param.hpp  reg-parameter.hpp  reg-widget.hpp
code/structures/dialogs/: chart-dialog.hpp  help-dialog.hpp  mod-par-dialog.hpp  tran-func-dialog.hpp
code/structures/forms/: tran-func-form.hpp  transfer-function-form.hpp
code/transfer-function/: constructors.cpp  transfer-function.hpp
code/transfer-function/compute-algorithms/: error-criterion.cpp  freq-searche.cpp
code/transfer-function/compute-responses/: frequency-response.cpp  impulse-response.cpp  transient-response.cpp
code/transfer-function/operators/: assign.cpp
data/styles/: button-style.qss
